# market-flow

./: .env.example  .firebaserc  .gitignore  CLAUDE_CONTEXT.md  README.md  firebase.json  firestore.rules  pyproject.toml  requirements.txt  run_dcf_comparison.sh
examples/: basic_usage.py  company_analysis_example.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  TickerCard.tsx
frontend/src/hooks/: useDCFResults.ts
frontend/src/pages/: Dashboard.tsx
functions/: main.py  requirements.txt
src/market_flow/: __init__.py  company_analysis_workflow.py  deep_research.py  document_store.py  drive_uploader.py
src/market_flow/agents/: __init__.py  boss_agent.py  dcf_analyst_agent.py  financial_tools.py  mcp_server.py  modeling_agent.py
src/market_flow/market_data/: __init__.py  fmp_client.py
src/market_flow/models/: __init__.py  cbcv_model.py  dcf_model.py
src/market_flow/workflows/: __init__.py  agents_workflow.py  company_analysis_workflow.py  dcf_analysis_workflow.py
